--- a/index.html
+++ b/index.html
@@ -14,26 +14,5 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Document</title>
   </head>
-  <body>
-    <blockquote class="quote">
-      <p class="quote__text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
-        nobis aliquid repellat architecto dolorem quas consequuntur quam illo,
-        culpa repellendus.
-      </p>
-      <footer>
-        <div class="media">
-          <div class="media__image">
-            <svg class="icon icon--primary quote__line">
-              <use xlink:href="images/sprite.svg#line"></use>
-            </svg>
-          </div>
-          <div class="media__body">
-            <h3 class="media__title quote__author">John Smith</h3>
-            <p class="quote__organization">ABC Company</p>
-          </div>
-        </div>
-      </footer>
-    </blockquote>
-  </body>
+  <body></body>
 </html>
