--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="callout callout--primary">
-      <div class="grid grid--1x2">
-        <div class="callout__content">
-          <h2 class="callout__heading">Ready to Get Started?</h2>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Accusantium earum impedit vel debitis eius est sapiente laudantium
-            maxime ea deleniti?
-          </p>
-        </div>
-        <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item 1</h2>
+        <img
+          class="icon icon--white collapsible__chevron"
+          src="images/chevron.svg"
+          alt=""
+        />
+      </header>
+      <div class="collapsible__content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+        neque!
       </div>
     </div>
+    <script src="js/main.js"></script>
   </body>
 </html>
