Created block component, container class.

--- a/index.html
+++ b/index.html
@@ -15,20 +15,31 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="collapsible collapsible--expanded">
-      <header class="collapsible__header">
-        <h2 class="collapsible__heading">Item 1</h2>
-        <img
-          class="icon icon--white collapsible__chevron"
-          src="images/chevron.svg"
-          alt=""
-        />
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, eveniet.
+        </p>
       </header>
-      <div class="collapsible__content">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
-        neque!
+      <div style="width: 30%; padding: 4rem">
+        <div class="card card--secondary">
+          <header class="card__header">Card Title</header>
+          <div class="card__body">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima,
+            reiciendis.
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
+    <section class="block block--dark block--skewed-left">
+      <div class="container">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, eveniet.
+        </p>
+      </div>
+    </section>
     <script src="js/main.js"></script>
   </body>
 </html>
