--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
   </head>
   <body>
     <section class="block container">
+      <header class="block__header">
+        <h2>Host on the Cloud to Keep Growing</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet,
+          quos.
+        </p>
+      </header>
       <article class="grid grid--1x2 feature">
-        <div>
+        <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
               <use xlink:href="images/sprite.svg#easy"></use>
@@ -44,7 +51,7 @@
         </picture>
       </article>
       <article class="grid grid--1x2 feature">
-        <div>
+        <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
               <use xlink:href="images/sprite.svg#computer"></use>
@@ -61,13 +68,67 @@
         <picture>
           <source
             type="image/webp"
-            srcset="images/easyz.webp 1x, images/easy@2x.webp 2x"
+            srcset="images/fast.webp 1x, images/fast@2x.webp 2x"
           />
           <source
             type="image/jpg"
-            srcset="images/easy.jpg 1x, images/easy@2x.jpg 2x"
+            srcset="images/fast.jpg 1x, images/fast@2x.jpg 2x"
           />
-          <img class="feature__image" src="images/easy@2x.jpg" alt="" />
+          <img class="feature__image" src="images/fast@2x.jpg" alt="" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#settings"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">WordPress made easy</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+            similique quia reprehenderit nemo deleniti odit voluptatem earum. A,
+            illum. Autem.
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
+        </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="images/wordpress.jpg 1x, images/wordpress@2x.jpg 2x"
+          />
+          <img class="feature__image" src="images/wordpress@2x.jpg" alt="" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#clock"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Simply fast websites</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+            similique quia reprehenderit nemo deleniti odit voluptatem earum. A,
+            illum. Autem.
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
+        </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/support.webp 1x, images/support@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="images/support.jpg 1x, images/support@2x.jpg 2x"
+          />
+          <img class="feature__image" src="images/support@2x.jpg" alt="" />
         </picture>
       </article>
     </section>
